--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Ponynote</title>
+    <title>collabman</title>
   </head>
   <body>
     <div id="root">
